@@ -27,17 +27,23 @@
  * @author DerManoMann
  * @package org.zenmagick.mvc
  * @version $Id$
- * @todo: add method to decode as part of request processing...
  */
 interface ZMSeoRewriter {
+
+    /**
+     * Decode a given request if this rewriter can decode it.
+     *
+     * @param ZMRequest request The current request.
+     * @return boolean <code>true</code> if, and only if, the request was decoded.
+     */
+    public function decode($request);
 
     /**
      * Generate a SEO url for the given parameter.
      *
      * @param ZMRequest request The current request.
      * @param array args Optional parameter.
-     * @return Either a rewritten usable URL, or <code>null</code>.
-     * @todo document!
+     * @return string Either a rewritten usable URL, or <code>null</code>.
      */
     public function rewrite($request, $args);
 
